--- a/src/main/resources/static/AdminPage.html
+++ b/src/main/resources/static/AdminPage.html
@@ -20,12 +20,12 @@
   <input type="submit" name="add" value="add">
 </form>
 
-<form id="update" name="update" action="/updateTopic.html">
+<form id="update">
  <input type="submit" name="update" value="update">
 </form>
 
-<form id="delete" name="delete" action="/deleteTopic.html">
- <input type="submit" name="delete" value="delete">
+<form id="delete">
+ <input type="submit" name="action" value="delete">
 </form>
 </body>
 </head>
