--- a/src/main/resources/static/updateTopic.html
+++ b/src/main/resources/static/updateTopic.html
@@ -3,17 +3,17 @@
 <body bgcolor="#ffff8f">
 <div style="text-align:center">
 <p >
-<h2 >Add a New Topic </h2>
+<h2 >Update a Topic </h2>
 </p>
 </div>
 
 
 
-<form id="add" action="topics">
+<form id="update">
   <input type="text" name="id" placeholder="id"><br/><br/><br/>
   <input type="text" name="name" placeholder="name"><br/><br/><br/>
   <input type="text" name="description" placeholder="description"><br/><br/><br/>
-  <input type="submit" name="action" value="add">
+  <input type="submit" name="action" value="update">
 </form>
 
 </body>
